--- a/skunkwerk/generation-2/impelement-a/app.css
+++ b/skunkwerk/generation-2/impelement-a/app.css
@@ -1,22 +1,6 @@
 body {
   font-family: sans-serif;
-}
-
-#otherBars {
-  margin-right: 16px;
-}
-
-#columns {
- padding-left: 32px;  
-}
-
-#leftColumn {
-  width: 200px; 
-  padding-right: 8px;
-}
-
-html /deep/ [flex][scroll] {
-  overflow: auto;
+  position: relative;
 }
 
 html /deep/ x-icon-button {
@@ -35,3 +19,6 @@ html /deep/ [avatar] {
   width: 28px;
 }
 
+html /deep/ [scroll] {
+  overflow: auto;
+}
